hphp/hack/test/typecheck/reactive/reactive_calls3.php.exp
File "reactive_calls3.php", line 10, characters 3-6:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
